# autonomous-claude

./: .gitignore  README.md  agent.py  autonomous_agent_demo.py  client.py  pyproject.toml
src/autonomous_claude/: __init__.py  agent.py  cli.py  client.py  config.py  progress.py  ui.py
src/autonomous_claude/prompts/: __init__.py  adoption_initializer_prompt.md  coding_prompt.md  enhancement_initializer_prompt.md  initializer_prompt.md
