[project]
name = "autonomous-claude"
version = "0.1.1"
description = "Build apps autonomously with Claude Code CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Ferdous Bhai" }
]
keywords = ["claude", "ai", "autonomous", "coding", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "typer>=0.9.0",
]

[project.scripts]
autonomous-claude = "autonomous_claude.cli:app"

[project.urls]
Homepage = "https://github.com/ferdousbhai/autonomous-claude"
Repository = "https://github.com/ferdousbhai/autonomous-claude"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autonomous_claude"]
artifacts = ["*.md"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
